force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/AvaliacaoEsportivaSocioemocional__c.object-meta.xml
<CustomObject>
    <label>Avaliação Esportiva e Socioemocional</label>
    <nameField>
        <displayFormat>AES-{00000000}</displayFormat>
        <label>Número AES</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaliações Esportivas e Socioemocionais</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>