force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Aluno__c.field-meta.xml
<CustomField>
    <fullName>Aluno__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Aluno</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Aluno</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Avaliações Esportivas e Socioemocionais</relationshipLabel>
    <relationshipName>Avaliacoes_Esportivas_e_Socioemocionais</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>