force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AprovacaoAcademica__c.field-meta.xml
<CustomField>
    <fullName>AprovacaoAcademica__c</fullName>
    <label>Aprovação Acadêmica?</label>
    <type>TextArea</type>
</CustomField>