force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AtacanteComBola__c.field-meta.xml
<CustomField>
    <fullName>AtacanteComBola__c</fullName>
    <label>Atacante com bola</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>