force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AtacanteComBolaA2__c.field-meta.xml
<CustomField>
    <fullName>AtacanteComBolaA2__c</fullName>
    <label>Atacante com bola A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>