force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AtacanteComBolaA3__c.field-meta.xml
<CustomField>
    <fullName>AtacanteComBolaA3__c</fullName>
    <label>Atacante com bola A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>