force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AtacanteSemBola__c.field-meta.xml
<CustomField>
    <fullName>AtacanteSemBola__c</fullName>
    <label>Atacante sem bola</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>