force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AtacanteSemBolaA2__c.field-meta.xml
<CustomField>
    <fullName>AtacanteSemBolaA2__c</fullName>
    <label>Atacante sem bola A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>