force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AtacanteSemBolaA3__c.field-meta.xml
<CustomField>
    <fullName>AtacanteSemBolaA3__c</fullName>
    <label>Atacante sem bola A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>