force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Autoconfianca__c.field-meta.xml
<CustomField>
    <fullName>Autoconfianca__c</fullName>
    <label>Autoconfiança</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>