force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AutoconfiancaA2__c.field-meta.xml
<CustomField>
    <fullName>AutoconfiancaA2__c</fullName>
    <label>Autoconfiança A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>