force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AutoconfiancaA3__c.field-meta.xml
<CustomField>
    <fullName>AutoconfiancaA3__c</fullName>
    <label>Autoconfiança A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>