force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Autocontrole__c.field-meta.xml
<CustomField>
    <fullName>Autocontrole__c</fullName>
    <label>Autocontrole</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>