force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AutocontroleA2__c.field-meta.xml
<CustomField>
    <fullName>AutocontroleA2__c</fullName>
    <label>Autocontrole A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>