force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AutocontroleA3__c.field-meta.xml
<CustomField>
    <fullName>AutocontroleA3__c</fullName>
    <label>Autocontrole A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>