force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Autonomia__c.field-meta.xml
<CustomField>
    <fullName>Autonomia__c</fullName>
    <label>Autonomia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>