force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AutonomiaA2__c.field-meta.xml
<CustomField>
    <fullName>AutonomiaA2__c</fullName>
    <label>Autonomia A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>