force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/AutonomiaA3__c.field-meta.xml
<CustomField>
    <fullName>AutonomiaA3__c</fullName>
    <label>Autonomia A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>