force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Comunicacao__c.field-meta.xml
<CustomField>
    <fullName>Comunicacao__c</fullName>
    <label>Comunicação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>