force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/ComunicacaoA2__c.field-meta.xml
<CustomField>
    <fullName>ComunicacaoA2__c</fullName>
    <label>Comunicação A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>