force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/ComunicacaoA3__c.field-meta.xml
<CustomField>
    <fullName>ComunicacaoA3__c</fullName>
    <label>Comunicação A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>