force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/ConceitosOfensivoseDefensivos__c.field-meta.xml
<CustomField>
    <fullName>ConceitosOfensivoseDefensivos__c</fullName>
    <label>Conceitos ofensivos e defensivos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>