force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/ConceitosOfensivoseDefensivosA2__c.field-meta.xml
<CustomField>
    <fullName>ConceitosOfensivoseDefensivosA2__c</fullName>
    <label>Conceitos ofensivos e defensivos A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>