force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/ConceitosOfensivoseDefensivosA3__c.field-meta.xml
<CustomField>
    <fullName>ConceitosOfensivoseDefensivosA3__c</fullName>
    <label>Conceitos ofensivos e defensivos A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>