force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Cooperacao__c.field-meta.xml
<CustomField>
    <fullName>Cooperacao__c</fullName>
    <label>Cooperação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>