force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/CooperacaoA2__c.field-meta.xml
<CustomField>
    <fullName>CooperacaoA2__c</fullName>
    <label>Cooperação A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>