force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/CooperacaoA3__c.field-meta.xml
<CustomField>
    <fullName>CooperacaoA3__c</fullName>
    <label>Cooperação A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>