force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DefensorForaDaBola__c.field-meta.xml
<CustomField>
    <fullName>DefensorForaDaBola__c</fullName>
    <label>Defensor(a) fora da bola</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>