force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DefensorForaDaBolaA2__c.field-meta.xml
<CustomField>
    <fullName>DefensorForaDaBolaA2__c</fullName>
    <label>Defensor(a) fora da bola A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>