force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DefensorForaDaBolaA3__c.field-meta.xml
<CustomField>
    <fullName>DefensorForaDaBolaA3__c</fullName>
    <label>Defensor(a) fora da bola A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>