force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DefensorNaBola__c.field-meta.xml
<CustomField>
    <fullName>DefensorNaBola__c</fullName>
    <label>Defensor(a) na bola</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>