force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DefensorNaBolaA2__c.field-meta.xml
<CustomField>
    <fullName>DefensorNaBolaA2__c</fullName>
    <label>Defensor(a) na bola A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>