force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DefensorNaBolaA3__c.field-meta.xml
<CustomField>
    <fullName>DefensorNaBolaA3__c</fullName>
    <label>Defensor(a) na bola A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>