force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DeltaAbsoluto21Esportivo__c.field-meta.xml
<CustomField>
    <fullName>DeltaAbsoluto21Esportivo__c</fullName>
    <formula>NotaEsportiva_A2__c -  NotaEsportivaA1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Absoluto (E21)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>