force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DeltaAbsoluto21Socioemocional__c.field-meta.xml
<CustomField>
    <fullName>DeltaAbsoluto21Socioemocional__c</fullName>
    <formula>NotaSocioemocionalA2__c -   NotaSocioemocionalA1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Absoluto (S21)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>