force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DeltaAbsoluto31Esportivo__c.field-meta.xml
<CustomField>
    <fullName>DeltaAbsoluto31Esportivo__c</fullName>
    <formula>NotaEsportivaA3__c -  NotaEsportivaA1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Absoluto (E31)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>