force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DeltaAbsoluto31Socioemocional__c.field-meta.xml
<CustomField>
    <fullName>DeltaAbsoluto31Socioemocional__c</fullName>
    <formula>NotaSocioemocionalA3__c -  NotaSocioemocionalA1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Absoluto (S31)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>