force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DeltaRelativo21Esportivo__c.field-meta.xml
<CustomField>
    <fullName>DeltaRelativo21Esportivo__c</fullName>
    <formula>(DeltaAbsoluto21Esportivo__c /  NotaEsportivaA1__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Relativo (E21)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>