force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DeltaRelativo31Esportivo__c.field-meta.xml
<CustomField>
    <fullName>DeltaRelativo31Esportivo__c</fullName>
    <formula>( DeltaAbsoluto31Esportivo__c /  NotaEsportivaA1__c )* 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Relativo (E31)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>