force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DeltaRelativo31Socioemocional__c.field-meta.xml
<CustomField>
    <fullName>DeltaRelativo31Socioemocional__c</fullName>
    <formula>( DeltaAbsoluto31Socioemocional__c /  NotaSocioemocionalA1__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Relativo (S31)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>