force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/DeltaRelativoS21Socioemocional__c.field-meta.xml
<CustomField>
    <fullName>DeltaRelativoS21Socioemocional__c</fullName>
    <formula>( DeltaAbsoluto21Socioemocional__c /  NotaSocioemocionalA1__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Relativo (S21)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>