force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Empatia__c.field-meta.xml
<CustomField>
    <fullName>Empatia__c</fullName>
    <label>Empatia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>