force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/EmpatiaA2__c.field-meta.xml
<CustomField>
    <fullName>EmpatiaA2__c</fullName>
    <label>Empatia A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>