force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/EmpatiaA3__c.field-meta.xml
<CustomField>
    <fullName>EmpatiaA3__c</fullName>
    <label>Empatia A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>