force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/EscolaAvaliacaoEsportivaSocioemocional__c.field-meta.xml
<CustomField>
    <fullName>EscolaAvaliacaoEsportivaSocioemocional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escola</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Avaliações Esportivas e Socioemocionais</relationshipLabel>
    <relationshipName>AvaliacoesEsportivaseSocioemocionais</relationshipName>
    <type>Lookup</type>
</CustomField>