force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/EstadoEscolaAluno__c.field-meta.xml
<CustomField>
    <fullName>EstadoEscolaAluno__c</fullName>
    <formula>TEXT( Aluno__r.Account.Estado__c )</formula>
    <label>Estado</label>
    <type>Text</type>
</CustomField>