force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Evolucao__c.field-meta.xml
<CustomField>
    <fullName>Evolucao__c</fullName>
    <label>Evolução</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>