force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Honestidade__c.field-meta.xml
<CustomField>
    <fullName>Honestidade__c</fullName>
    <label>Honestidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>