force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/HonestidadeA2__c.field-meta.xml
<CustomField>
    <fullName>HonestidadeA2__c</fullName>
    <label>Honestidade A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>