force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/HonestidadeA3__c.field-meta.xml
<CustomField>
    <fullName>HonestidadeA3__c</fullName>
    <label>Honestidade A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>