force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/MediaIndicadoresEsportivos__c.field-meta.xml
<CustomField>
    <fullName>MediaIndicadoresEsportivos__c</fullName>
    <formula>( NotaEsportivaA1__c +  NotaEsportiva_A2__c +  NotaEsportivaA3__c ) / 3</formula>
    <label>Média Indicadores Esportivos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>