force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/MediaIndicadoresSocioemocionais__c.field-meta.xml
<CustomField>
    <fullName>MediaIndicadoresSocioemocionais__c</fullName>
    <formula>( NotaSocioemocionalA1__c  +  NotaSocioemocionalA2__c +  NotaSocioemocionalA3__c ) / 3</formula>
    <label>Média Indicadores Socioemocionais</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>