force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NivelA2__c.field-meta.xml
<CustomField>
    <fullName>NivelA2__c</fullName>
    <formula>IF( NotaEsportiva_A2__c &lt; 13,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXB&quot;, &quot;green&quot;, 30, 30),
IF( NotaEsportiva_A2__c &gt; 12 &amp;&amp; NotaEsportiva_A2__c &lt; 30,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXG&quot;, &quot;yellow&quot;, 30, 30),
IF( NotaEsportiva_A2__c &gt; 29 &amp;&amp; NotaEsportiva_A2__c &lt; 47 ,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXL&quot;, &quot;orange&quot;, 30, 30),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXQ&quot;, &quot;blue&quot;, 30, 30)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nível A2</label>
    <type>Text</type>
</CustomField>