force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NivelA3__c.field-meta.xml
<CustomField>
    <fullName>NivelA3__c</fullName>
    <formula>IF( NotaEsportivaA3__c &lt; 13,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXB&quot;, &quot;green&quot;, 30, 30),
IF( NotaEsportivaA3__c &gt; 12 &amp;&amp; NotaEsportivaA3__c &lt; 30,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXG&quot;, &quot;yellow&quot;, 30, 30),
IF( NotaEsportivaA3__c &gt; 29 &amp;&amp; NotaEsportivaA3__c &lt; 47 ,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXL&quot;, &quot;orange&quot;, 30, 30),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXQ&quot;, &quot;blue&quot;, 30, 30)
)))</formula>
    <label>Nível A3</label>
    <type>Text</type>
</CustomField>