force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NivelEsportivoDoAluno__c.field-meta.xml
<CustomField>
    <fullName>NivelEsportivoDoAluno__c</fullName>
    <formula>NivelA3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nível Esportivo do Aluno</label>
    <type>Text</type>
</CustomField>