force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NivelSocioemocionalA2__c.field-meta.xml
<CustomField>
    <fullName>NivelSocioemocionalA2__c</fullName>
    <formula>IF(  NotaSocioemocionalA2__c &lt; 13,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXB&quot;, &quot;Verde&quot;, 30, 30),
IF( NotaSocioemocionalA2__c &gt; 12 &amp;&amp; NotaSocioemocionalA2__c &lt; 30,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXG&quot;, &quot;Amarelo&quot;, 30, 30),
IF( NotaSocioemocionalA2__c &gt; 29 &amp;&amp; NotaSocioemocionalA2__c &lt; 47 ,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXL&quot;, &quot;Laranja&quot;, 30, 30),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXQ&quot;, &quot;Azul&quot;, 30, 30)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nível Socioemocional A2</label>
    <type>Text</type>
</CustomField>