force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NivelSocioemocionalA3__c.field-meta.xml
<CustomField>
    <fullName>NivelSocioemocionalA3__c</fullName>
    <formula>IF(  NotaSocioemocionalA3__c &lt; 13,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXB&quot;, &quot;green&quot;, 30, 30),
IF( NotaSocioemocionalA3__c &gt; 12 &amp;&amp; NotaSocioemocionalA3__c &lt; 30,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXG&quot;, &quot;yellow&quot;, 30, 30),
IF( NotaSocioemocionalA3__c &gt; 29 &amp;&amp; NotaSocioemocionalA3__c &lt; 47 ,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXL&quot;, &quot;red&quot;, 30, 30),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015Z00000037TXQ&quot;, &quot;blue&quot;, 30, 30)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nível Socioemocional A3</label>
    <type>Text</type>
</CustomField>