force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NivelSocioemocionalDoAluno__c.field-meta.xml
<CustomField>
    <fullName>NivelSocioemocionalDoAluno__c</fullName>
    <formula>NivelSocioemocionalA3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nível Socioemocional do Aluno</label>
    <type>Text</type>
</CustomField>