force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NotaEsportiva_A2__c.field-meta.xml
<CustomField>
    <fullName>NotaEsportiva_A2__c</fullName>
    <formula>AtacanteComBolaA2__c +  DefensorNaBolaA2__c +  DefensorForaDaBolaA2__c +  ConceitosOfensivoseDefensivosA2__c +  AtacanteSemBolaA2__c +  TecnicaIndividualA2__c</formula>
    <label>Nota Esportiva A2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>