force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NotaEsportivaA1__c.field-meta.xml
<CustomField>
    <fullName>NotaEsportivaA1__c</fullName>
    <formula>AtacanteComBola__c +  DefensorNaBola__c +  AtacanteSemBola__c +  DefensorForaDaBola__c +  ConceitosOfensivoseDefensivos__c +  TecnicaIndividual__c</formula>
    <label>Nota Esportiva A1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>