force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NotaEsportivaA3__c.field-meta.xml
<CustomField>
    <fullName>NotaEsportivaA3__c</fullName>
    <formula>DefensorNaBolaA3__c +  DefensorForaDaBolaA3__c +  ConceitosOfensivoseDefensivosA3__c +  AtacanteComBolaA3__c +  AtacanteSemBolaA3__c +  TecnicaIndividualA3__c</formula>
    <label>Nota Esportiva A3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>