force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NotaSocioemocionalA1__c.field-meta.xml
<CustomField>
    <fullName>NotaSocioemocionalA1__c</fullName>
    <description>Faz a média dos 12 indicadores, transformando-os em 6.</description>
    <formula>(( Autoconfianca__c  +  Empatia__c) / 2) + ((Honestidade__c +  Respeito__c) / 2) + (( Autonomia__c +  Responsabilidade__c) /2 ) + (( Autocontrole__c +  Tomada_de_decisao__c) / 2) + (( Comunicacao__c +  Cooperacao__c) / 2 ) + (( Persistencia__c +  Resiliencia__c) / 2 )</formula>
    <label>Nota Socioemocional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>