force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NotaSocioemocionalA2__c.field-meta.xml
<CustomField>
    <fullName>NotaSocioemocionalA2__c</fullName>
    <formula>((  AutoconfiancaA2__c  +  EmpatiaA2__c ) / 2) + (( HonestidadeA2__c  +  RespeitoA2__c ) / 2) + ((  AutonomiaA2__c  +  ResponsabilidadeA2__c ) /2 ) + ((  AutocontroleA2__c  +  TomadadedecisaoA2__c ) / 2) + ((  ComunicacaoA2__c  +  CooperacaoA2__c ) / 2 ) + ((  PersistenciaA2__c  +  ResilienciaA2__c ) / 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nota Socioemocional A2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>