force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/NotaSocioemocionalA3__c.field-meta.xml
<CustomField>
    <fullName>NotaSocioemocionalA3__c</fullName>
    <formula>((  AutoconfiancaA3__c  +  EmpatiaA3__c ) / 2) + (( HonestidadeA3__c  +  RespeitoA3__c ) / 2) + ((  AutonomiaA3__c  +  ResponsabilidadeA3__c ) /2 ) + ((  AutocontroleA3__c  +  TomadadeDecisaoA3__c ) / 2) + ((  ComunicacaoA3__c  +  CooperacaoA3__c ) / 2 ) + ((  PersistenciaA3__c  +  ResilienciaA3__c ) / 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nota Socioemocional A3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>