force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Periodo_de_Avaliacao__c.field-meta.xml
<CustomField>
    <fullName>Periodo_de_Avaliacao__c</fullName>
    <label>Período de Avaliação</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1ª Avaliação</fullName>
            </value>
            <value>
                <fullName>2ª Avaliação</fullName>
            </value>
            <value>
                <fullName>3ª Avaliação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>