force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/PeriododeAvaliacaoA2__c.field-meta.xml
<CustomField>
    <fullName>PeriododeAvaliacaoA2__c</fullName>
    <label>Período de Avaliação A2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2ª Avaliação</fullName>
                <default>true</default>
                <label>2ª Avaliação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>