force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/PeriododeAvaliacaoA2Socioemocional__c.field-meta.xml
<CustomField>
    <fullName>PeriododeAvaliacaoA2Socioemocional__c</fullName>
    <label>Período de Avaliação A2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2ª Avaliação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>