force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/PeriododeAvaliacaoA3__c.field-meta.xml
<CustomField>
    <fullName>PeriododeAvaliacaoA3__c</fullName>
    <label>Período de Avaliação A3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3ª Avaliação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>