force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Persistencia__c.field-meta.xml
<CustomField>
    <fullName>Persistencia__c</fullName>
    <label>Persistência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>