force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/PersistenciaA2__c.field-meta.xml
<CustomField>
    <fullName>PersistenciaA2__c</fullName>
    <label>Persistência A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>