force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/PersistenciaA3__c.field-meta.xml
<CustomField>
    <fullName>PersistenciaA3__c</fullName>
    <label>Persistência A3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>