force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Resiliencia__c.field-meta.xml
<CustomField>
    <fullName>Resiliencia__c</fullName>
    <label>Resiliência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>