force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/ResilienciaA2__c.field-meta.xml
<CustomField>
    <fullName>ResilienciaA2__c</fullName>
    <label>Resiliência A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>