force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/ResilienciaA3__c.field-meta.xml
<CustomField>
    <fullName>ResilienciaA3__c</fullName>
    <label>Resiliência A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>