force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Respeito__c.field-meta.xml
<CustomField>
    <fullName>Respeito__c</fullName>
    <label>Respeito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>