force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/RespeitoA2__c.field-meta.xml
<CustomField>
    <fullName>RespeitoA2__c</fullName>
    <label>Respeito A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>