force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/RespeitoA3__c.field-meta.xml
<CustomField>
    <fullName>RespeitoA3__c</fullName>
    <label>Respeito A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>